--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,7 @@
 @import "settings";
-@import "foundation";
+@import "foundation/components/grid";
+
+// @import "foundation";
 
 // Or selectively include components
 // @import
